@@ -1,8 +1,7 @@
 # build libc with nptl instead of linuxthreads
 libc_MIN_KERNEL_SUPPORTED = 2.6.0
 libc_add-ons = nptl $(add-ons)
-libc_extra_cflags = -O3
-libc_extra_config_options := $(extra_config_options) --with-tls --with-__thread
+libc_extra_cflags = -O3 -g1
 
 # /lib64 and /usr/lib64 are provided by glibc instead base-files: #259302.
 define libc6_extra_pkg_install
