@@ -85,6 +85,10 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
   * Add support for extra_pkg_install hooks for udeb packages.
   * Add symlinks /lib64 -> /lib and /usr/lib64 -> /usr/lib in libc6-udeb
     on amd64.
+  * Build back with -g1 on amd64, it was removed to permit the build with
+    gcc-3.4.
+  * Remove --with-tls and --with-__thread in sysdeps/* as they are the
+    default option since version 2.3.5.
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
